--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz app</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="assests/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assests/favicon.svg" />
-    <link rel="shortcut icon" href="assests/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assests/apple-touch-icon.png" />
-    <link rel="manifest" href="assests/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <div id="quiz-container">
