--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="quiz-container">
-        <h2><img src="./assests/rb_53289.png" alt=""><p>QUIZzzz</p></h2>
+        <h2><img src="./rb_53289.png" alt=""><p>QUIZzzz</p></h2>
         <div id="section-div" >
             <div class="section">
                 <h4>General Knowledge</h4>
